[package]
name = "graphidxbaselines"
authors = ["Erik Thordsen"]
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "graphidxbaselines"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
test = true
doc = true

[dependencies]
graphidx = { path = "../GraphIndexAPI", default-features = false }
hsgf_lib = { path = "../hsgf/hsgf_lib", default-features = false }
num = "0.4.0"
ndarray = "0.15" # Has to be the same as used by hdf5 to work
ndarray-rand = "0.14.0"
ndarray-linalg = {version="0.16.0", features = ["openblas-system"]}
ndarray-stats = "0.6.0"
rand = "0.8.5"
futures = "0.3.28"
paste = "1.0.12"
probability = "0.20.3"
indicatif = "0.17.3"
hdf5 = "0.8.1"
rayon = "1.7.0"
half = {version="2.2.1", features=["num-traits"]}
foldhash = "0.1.4"
pyo3 = { version = "0.23.4", features = ["extension-module","multiple-pymethods"], optional = true }
numpy = { version = "0.23.0", optional = true}

[dev-dependencies]
pyo3 = { version = "0.23.4", features = ["multiple-pymethods"] }
numpy = { version = "0.23.0" }
# criterion = { version = "0.5.1", features = ['html_reports'] }

[features]
default = ["python"]
python = ["pyo3", "numpy"]

[profile.release]
# features = ["python"]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
features = ["python"]

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
inherits = "release"
features = []

[[bench]]
name = "bench"
# harness = false


